--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: buildpacks-action
 description: 'Execute buildpacks CLI in GitHub Actions'
-author: 'mamezou-tech'
+author: 'bigloupe'
 branding:
   icon: 'chevron-right'
   color: 'purple'
